Bug 193076 - [build] if_vmx fails to build on stable/10
Summary: [build] if_vmx fails to build on stable/10
Status: Closed FIXED
Alias: None
Product: Base System
Classification: Unclassified
Component: kern (show other bugs)
Version: 10.0-STABLE
Hardware: Any Any
: --- Affects Some People
Assignee: freebsd-bugs (Nobody)
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2014-08-27 19:44 UTC by Enji Cooper
Modified: 2014-08-28 04:21 UTC (History)
1 user (show)

See Also:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Enji Cooper freebsd_committer freebsd_triage 2014-08-27 19:44:53 UTC
if_vmx compiles cleanly on CURRENT, but not on stable/10 as noted below.

Repro:

/bin/sh
cat > src.conf <<'EOF'
MALLOC_PRODUCTION=

WITHOUT_ATM=
WITHOUT_AUDIT=
WITHOUT_BHYVE=
WITHOUT_BIND_DNSSEC=
WITHOUT_BIND_ETC=
WITHOUT_BIND_LIBS_LWRES=
WITHOUT_BIND_NAMED=
WITHOUT_BLUETOOTH=
WITHOUT_BSNMP=
WITHOUT_CALENDAR=
WITHOUT_CLANG=
WITHOUT_CLANG_BOOTSTRAP=
WITHOUT_CLANG_IS_CC=
WITHOUT_CTM=
WITHOUT_FORTRAN=
WITHOUT_FREEBSD_UPDATE=
WITHOUT_GAMES=
WITH_GCC=
WITHOUT_GCOV=
WITH_GNUCXX=
WITHOUT_GPIB=
WITHOUT_HAST=
WITHOUT_HESOID=
WITHOUT_HTML=
WITHOUT_I4B=
WITH_ICONV=
WITHOUT_IPFILTER=
WITHOUT_IPFW=
WITHOUT_IPX=
WITHOUT_LIBKSE=
WITHOUT_LPR=
WITHOUT_MAIL=
WITHOUT_NCP=
WITHOUT_NDIS=
WITHOUT_NIS=
WITH_NLS=
WITHOUT_NS_CACHING=
WITHOUT_OBJC=
WITHOUT_PF=
WITHOUT_PORTSNAP=
WITHOUT_PPP=
WITHOUT_PROFILE=
WITHOUT_RADIUS=
WITHOUT_RCMDS=
WITH_SSP=
WITHOUT_SVN=
WITHOUT_SVNLITE=
WITHOUT_SYSINSTALL=
WITH_TESTS=
WITHOUT_WIRELESS=
WITHOUT_WPA_SUPPLICANT_EAPOL=
WITH_ZFS=
EOF

(
echo "include GENERIC";
echo "device vmx";
) > MY_GENERIC

export KERNCONFDIR=$PWD KERNCONF=MY_GENERIC SRCCONF=$PWD/src.conf
make buildworld
make buildkernel

Expected result:

The compile should complete cleanly.

Actual result:

gcc fails to compile the module with -Wuninitialized.

cc1: warnings being treated as errors
/usr/src.svn/sys/dev/vmware/vmxnet3/if_vmx.c: In function 'vmxnet3_txq_mq_start_locked':
/usr/src.svn/sys/dev/vmware/vmxnet3/if_vmx.c:2625: warning: 'ip6' may be used uninitialized in this function
/usr/src.svn/sys/dev/vmware/vmxnet3/if_vmx.c:2625: note: 'ip6' was declared here
/usr/src.svn/sys/dev/vmware/vmxnet3/if_vmx.c:2622: warning: 'ip' may be used uninitialized in this function
/usr/src.svn/sys/dev/vmware/vmxnet3/if_vmx.c:2622: note: 'ip' was declared here
Comment 1 Enji Cooper freebsd_committer freebsd_triage 2014-08-27 19:51:08 UTC
Oh yeah.. important piece of info:

# svn info
Path: .
Working Copy Root Path: /usr/src.svn
URL: svn+ssh://ngie@svn.freebsd.org/base/stable/10
Relative URL: ^/stable/10
Repository Root: svn+ssh://ngie@svn.freebsd.org/base
Repository UUID: ccf9f872-aa2e-dd11-9fc8-001c23d0bc1f
Revision: 270724
Node Kind: directory
Schedule: normal
Last Changed Author: ngie
Last Changed Rev: 270724
Last Changed Date: 2014-08-27 11:25:14 -0700 (Wed, 27 Aug 2014)
Comment 2 Bryan Venteicher freebsd_committer freebsd_triage 2014-08-27 19:56:14 UTC
r267632 needs to be MFC'ed.
Comment 3 commit-hook freebsd_committer freebsd_triage 2014-08-28 04:21:02 UTC
A commit references this bug:

Author: bryanv
Date: Thu Aug 28 04:20:25 UTC 2014
New revision: 270739
URL: http://svnweb.freebsd.org/changeset/base/270739

Log:
  MFC r267632:

    Fix GCC compile warning: Variable(s) can be used uninitialized.

  PR:		193076

Changes:
_U  stable/10/
  stable/10/sys/dev/vmware/vmxnet3/if_vmx.c