MFC r267632:

Fix GCC compile warning: Variable(s) can be used uninitialized.

PR:		193076

Former-commit-id: 78101ce681b51d0e952e622094b9c0a2112c5aa9